# trustauthority-client-for-c

./: .gitignore  CMakeLists.txt
docker/: Dockerfile.ubuntu_20
examples/: CMakeLists.txt
examples/tdx_token/: Dockerfile
src/: CMakeLists.txt
src/connector/: CMakeLists.txt
src/sgx/: CMakeLists.txt
src/tdx/: CMakeLists.txt
src/token_provider/: CMakeLists.txt
src/token_verifier/: CMakeLists.txt
